# glut-neural-network

./: CMakeLists.txt  ReadMe.md  main.cc  reseau.cc  reseau.h
